test/cli/test/images/digest/kyverno-test.yaml
name: test-image-digest
policies:
- policies.yaml
resources:
- resources.yaml
results:
- kind: Pod
  policy: require-image-digest
  resources:
  - test/no-digest
  result: fail
  rule: check-digest
- kind: Pod
  policy: require-image-digest
  resources:
  - test/with-digest
  result: pass
  rule: check-digest
