test/cli/test/images/digest/policies.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
  name: require-image-digest
spec:
  admission: true
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: check-digest
    validate: {}
    verifyImages:
    - imageReferences:
      - '*'
      mutateDigest: false
      required: false
      useCache: true
      verifyDigest: true
  validationFailureAction: Audit
