test/cli/test/images/digest/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-digest
  namespace: test
  labels:
    app: app
spec:
  containers:
    - name: nginx
      image: nginx:latest
